--- a/.github/workflows/update-habbo-resouces.yml
+++ b/.github/workflows/update-habbo-resouces.yml
@@ -26,7 +26,7 @@ jobs:
 
       - name: 📦 Extract Habbo Resources
         run: |
-          npx shroom dump --url https://habbo.com/gamedata/external_variables --location ./
+          npx wsproom dump --url https://habbo.com/gamedata/external_variables --location ./
 
       - name: 🔐 Configure Git
         run: |
