--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "description": "",
     "main": "index.js",
     "dependencies": {
-      "@wiredsnippets/shroom": "0.8.0"
+      "@wiredsnippets/shroom": "0.7.8-rc.5"
     },
     "author": "",
     "license": "ISC"
